--- a/AppProduct.Shared.Blazor/Pages/ListUser.razor
+++ b/AppProduct.Shared.Blazor/Pages/ListUser.razor
@@ -5,10 +5,10 @@
 @inject HttpClient HttpClient
 @attribute [Authorize(Roles = "Administrator")]
 
-<PageTitle>User</PageTitle>
+<PageTitle>Users</PageTitle>
 
 <div class="mb-3">
-    <MudText Typo="Typo.h3">User</MudText>
+    <MudText Typo="Typo.h3">Users</MudText>
 </div>
 
 <MudStack AlignItems="AlignItems.End" Class="mb-3">
