--- a/AppProduct.Shared.Blazor/Pages/AddProductReview.razor
+++ b/AppProduct.Shared.Blazor/Pages/AddProductReview.razor
@@ -6,7 +6,7 @@
     <DataAnnotationsValidator />
     <MudDialog>
         <TitleContent>
-            <MudText Typo="Typo.h6">Add ProductReview</MudText>
+            <MudText Typo="Typo.h6">Add Product Review</MudText>
         </TitleContent>
         <DialogContent>
             <MudNumericField @bind-Value="record.ProductId" For="@(() => record.ProductId)" Label="ProductId" />
@@ -16,7 +16,7 @@
             <MudTextField @bind-Value="record.Title" For="@(() => record.Title)" Label="Title" />
             <MudTextField @bind-Value="record.ReviewText" For="@(() => record.ReviewText)" Label="ReviewText" />
             <MudTextField Format="s" InputType="InputType.DateTimeLocal" @bind-Value="record.ReviewDate" For="@(() => record.ReviewDate)" Label="ReviewDate" />
-            <MudCheckBox @bind-Checked="record.IsVerifiedPurchase" For="@(() => record.IsVerifiedPurchase)" Label="IsVerifiedPurchase" />
+            <MudCheckBox @bind-Value="record.IsVerifiedPurchase" For="@(() => record.IsVerifiedPurchase)" Label="IsVerifiedPurchase" />
             <MudNumericField @bind-Value="record.HelpfulVotes" For="@(() => record.HelpfulVotes)" Label="HelpfulVotes" />
             <MudTextField Format="s" InputType="InputType.DateTimeLocal" @bind-Value="record.CreatedDate" For="@(() => record.CreatedDate)" Label="CreatedDate" />
             <MudTextField Format="s" InputType="InputType.DateTimeLocal" @bind-Value="record.ModifiedDate" For="@(() => record.ModifiedDate)" Label="ModifiedDate" />
