--- a/AppProduct.Shared.Blazor/Pages/UpdateProductReview.razor
+++ b/AppProduct.Shared.Blazor/Pages/UpdateProductReview.razor
@@ -6,7 +6,7 @@
 {
     <MudDialog>
         <TitleContent>
-            <MudText Typo="Typo.h6">Update ProductReview</MudText>
+            <MudText Typo="Typo.h6">Update Product Review</MudText>
         </TitleContent>
         <DialogContent>
             <MudText>Loading...</MudText>
@@ -34,7 +34,7 @@ else
                 <MudTextField @bind-Value="record.Title" For="@(() => record.Title)" Label="Title" />
                 <MudTextField @bind-Value="record.ReviewText" For="@(() => record.ReviewText)" Label="ReviewText" />
                 <MudTextField Format="s" InputType="InputType.DateTimeLocal" @bind-Value="record.ReviewDate" For="@(() => record.ReviewDate)" Label="ReviewDate" />
-                <MudCheckBox @bind-Checked="record.IsVerifiedPurchase" For="@(() => record.IsVerifiedPurchase)" Label="IsVerifiedPurchase"></MudCheckBox>
+                <MudCheckBox @bind-Value="record.IsVerifiedPurchase" For="@(() => record.IsVerifiedPurchase)" Label="IsVerifiedPurchase"></MudCheckBox>
                 <MudNumericField @bind-Value="record.HelpfulVotes" For="@(() => record.HelpfulVotes)" Label="HelpfulVotes" />
                 <MudTextField Format="s" InputType="InputType.DateTimeLocal" @bind-Value="record.CreatedDate" For="@(() => record.CreatedDate)" Label="CreatedDate" />
                 <MudTextField Format="s" InputType="InputType.DateTimeLocal" @bind-Value="record.ModifiedDate" For="@(() => record.ModifiedDate)" Label="ModifiedDate" />
